# nexguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  env.example  pyproject.toml  railway.toml
backend/migrations/: env.py
backend/migrations/versions/: 539a4fc7aaa7_add_calibration_snapshots.py  616ab0483dd6_initial_schema.py
backend/src/nexguard/: __init__.py
backend/src/nexguard/application/: __init__.py
backend/src/nexguard/application/use_cases/: __init__.py  auth.py  detect_anomalies.py  feedback.py  generate_report.py  ingest_and_parse.py
backend/src/nexguard/config/: __init__.py  runtime.py  settings.py
backend/src/nexguard/domain/: __init__.py  auth.py  detection.py  entities.py  errors.py  events.py  evidence.py  ports.py  report.py  value_objects.py  verification.py
backend/src/nexguard/evaluation/: __init__.py  calibration.py  evaluator.py  harness.py  metrics.py
backend/src/nexguard/infrastructure/: __init__.py
backend/src/nexguard/infrastructure/bus/: __init__.py  memory_bus.py  redis_bus.py
backend/src/nexguard/infrastructure/datasets/: __init__.py  bgl.py  cicids.py  hdfs.py
backend/src/nexguard/infrastructure/db/: __init__.py  mappers.py  models.py  repositories.py  session.py
backend/src/nexguard/infrastructure/detection/: __init__.py  _sequence.py  ensemble.py  explain.py  sequence_lstm.py  sequence_transformer.py  statistical_iforest.py
backend/src/nexguard/infrastructure/llm/: __init__.py  ollama_provider.py  prompts.py  stub_provider.py  verifier.py
backend/src/nexguard/infrastructure/memory/: __init__.py  repositories.py
backend/src/nexguard/infrastructure/parsing/: __init__.py  drain3_miner.py
backend/src/nexguard/infrastructure/tracking/: __init__.py  mlflow_tracker.py  null_tracker.py
backend/src/nexguard/interfaces/: __init__.py  bootstrap.py  cli.py
backend/src/nexguard/interfaces/api/: __init__.py  app.py  container.py  deps.py  errors.py  middleware.py  schemas.py
backend/src/nexguard/interfaces/api/routers/: alerts.py  analytics.py  auth.py  config.py  detection.py  feedback.py  health.py  metrics.py  sessions.py  ws.py
backend/src/nexguard/observability/: __init__.py  logging.py  metrics.py
backend/src/nexguard/security/: __init__.py  hashing.py  jwt.py  rbac.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/fixtures/cicids/: cicids_sample.csv
backend/tests/fixtures/hdfs/: anomaly_label.csv
backend/tests/integration/: conftest.py
backend/tests/integration/api/: conftest.py  test_alerts_flow.py  test_auth_and_security.py  test_explorer_analytics.py  test_feedback_flow.py  test_observability.py  test_ws.py
backend/tests/integration/application/: test_ingest_and_parse.py
backend/tests/integration/datasets/: test_bgl.py  test_cicids.py  test_hdfs.py
backend/tests/integration/db/: test_repositories.py
backend/tests/integration/detection/: test_sequence_lstm.py  test_sequence_transformer.py  test_statistical_iforest.py
backend/tests/integration/evaluation/: test_harness.py
backend/tests/integration/parsing/: test_drain3_miner.py
backend/tests/integration/tracking/: test_mlflow_tracker.py
backend/tests/regression/: test_seeded_anomalies.py
backend/tests/unit/application/: test_detect_anomalies.py  test_feedback.py  test_generate_report.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/detection/: test_ensemble.py
backend/tests/unit/domain/: test_entities.py  test_events.py  test_ports_contract.py  test_report_and_evidence.py  test_value_objects.py  test_verification.py
backend/tests/unit/evaluation/: test_calibration.py  test_metrics.py
backend/tests/unit/llm/: test_ollama_provider.py  test_stub_provider.py  test_verifier.py
backend/tests/unit/security/: test_security.py
backend/tests/unit/tracking/: test_null_tracker.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: DEPLOYMENT.md  TESTING.md  benchmarks.md
docs/architecture/: README.md  build-plan.md  data-model.md  detection-pipeline.md
docs/architecture/adr/: 0001-clean-architecture-and-di.md  0002-detection-approach.md  0003-local-llm-triage-and-verification.md  0004-realtime-transport.md  0005-datasets-and-reproducibility.md  0006-security-model.md
docs/superpowers/plans/: 2026-07-19-vertical-slice.md
docs/superpowers/specs/: 2026-07-19-nexguard-design.md
frontend/: .dockerignore  README.md  env.example  next.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: login.spec.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/alerts/: page.tsx
frontend/src/app/(app)/analytics/: page.tsx
frontend/src/app/(app)/config/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/feedback/: page.tsx
frontend/src/app/(app)/logs/: page.tsx
frontend/src/app/(app)/monitoring/: page.tsx
frontend/src/app/(app)/reports/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/components/: alerts-table.test.tsx  alerts-table.tsx  feedback-controls.test.tsx  feedback-controls.tsx  live-status.tsx  logo.tsx  page-header.tsx  report-drawer.tsx  severity-donut.tsx  severity.tsx  stat-card.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  sheet.tsx  skeleton.tsx
frontend/src/lib/: api.ts  auth.tsx  config.ts  queries.ts  types.ts  utils.test.ts  utils.ts  ws.ts
infrastructure/grafana/dashboards/: nexguard.json
infrastructure/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/prometheus/: prometheus.yml
ml/: README.md  evaluate.py  requirements.txt
ml/results/: model_comparison.md
scripts/: download_data.py  generate_hdfs_sample.py
