[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexguard"
version = "0.1.0"
description = "NexGuard — AI-Powered Security Operations Platform (backend)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NexGuard" }]

# Core runtime dependencies. The serving path runs detection inline (PyTorch +
# scikit-learn), so those are runtime deps, not optional. Offline training/MLOps
# tooling (MLflow) lives in ml/ and never enters the serving image. See ADR-0001.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "redis>=5.2",
    "structlog>=24.4",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    "prometheus-client>=0.21",
    "psutil>=6.1",
    "drain3>=0.9.11",
    "numpy>=1.26",
    "torch>=2.2",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
# Production database driver (SQLite is the dev default).
postgres = ["asyncpg>=0.30"]
# NOTE: MLflow is intentionally NOT a backend dependency — it needs cachetools>=5
# while drain3 (a serving dependency) pins cachetools<5. Offline MLOps therefore
# runs in its own environment; see ml/requirements.txt. The MlflowExperimentTracker
# adapter sits behind the ExperimentTracker port so the package never imports mlflow.

# Developer/CI tooling as a PEP 735 dependency group — uv installs it by default,
# so `uv run` keeps the environment stable across invocations.
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-psutil>=6.1",
]

[project.scripts]
nexguard = "nexguard.interfaces.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexguard"]

[tool.uv]
default-groups = ["dev"]

# Pin PyTorch to the CPU wheels on every platform: deterministic, and avoids the
# multi-GB CUDA build on Linux CI (NexGuard serves inference on CPU).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

# ─────────────────────────── Ruff ───────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Autogenerated migration bodies are not hand-styled; env.py IS checked.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "TID",              # tidy-imports
    "RUF",              # ruff-specific
    "ASYNC",            # async correctness
]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "N818",   # domain error names don't need Error suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["nexguard"]

# ─────────────────────────── Mypy ───────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
files = ["src", "tests"]
# tests/ is not a package; derive distinct module names (tests.conftest vs
# tests.integration.conftest) from the working directory rather than clashing.
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# Third-party libs without type stubs.
module = ["drain3.*", "sklearn.*", "torch.*", "scipy.*", "joblib.*", "mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# redis-py 8 ships inline types, but its async cleanup methods (aclose) are
# unannotated; don't fail strict untyped-call checks for this one adapter.
module = ["nexguard.infrastructure.bus.redis_bus"]
disallow_untyped_calls = false

# ─────────────────────────── Pytest ───────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: exercises a real adapter (db, drain3, torch, sklearn)",
    "slow: long-running (model training)",
]
filterwarnings = [
    # Third-party: joblib's numpy pickle vs NumPy 2.5 shape-setter deprecation.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning:joblib.numpy_pickle",
    # Starlette's TestClient warns about httpx; benign for our WebSocket tests.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["nexguard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
